# gtk-gstreamer-vala-boilerplate

./: .gitignore  LICENSE.build  README.md  meson.build  meson_options.txt
include/: meson.build
src/: config.vala.in  meson.build
src/lib/: meson.build
src/lib/core/: application.vala  meson.build  photobin.vala  pipeline.vala  recordbin.vala
src/lib/gui/: app_window.vala  camera_controls.vala  components.vala  gapplication.vala  histogram.vala  layouts.vala  meson.build
src/lib/gui/resources/: gresources.xml  meson.build
src/lib/gui/resources/components/: camera_controls.ui  histogram.ui
src/lib/gui/resources/layouts/: app_window.ui
src/lib/utils/: meson.build  utils.vala
src/plugins/: dvrbin.vala  meson.build  photobin.vala  plugin.vala.in
src/test/: meson.build
src/test/exitcode/: meson.build  test_histogram.vala
